# adaptive-chatbot

./: .gitignore  ADVANCED_RELIABILITY_SECURITY.md  COMPREHENSIVE_DEBUG_OPTIMIZATION_SUMMARY.md  CRITICAL_ISSUES_RESOLVED.md  FLASK_DEPENDENCY_FIX_SUMMARY.md  OPTIMIZATION_APPLICATION_REPORT.md  OPTIMIZATION_COMPLETE_REPORT.md  README.md  README_ADVANCED_NLP.md  README_BUSINESS.md  WARP.md  adaptive_chatbot.py  adaptive_chatbot_enhanced.py  advanced_conversation_manager.py  advanced_multilingual_bridge.py  advanced_nlp.py  apply_optimizations.py  business_intelligence_engine.py  chatbot.py  config.py  config_production.yaml  constraints-dev.txt  conversation_manager.py  create_package.py  critical_issues_integration.py  demo_chatbot.py  demo_enhanced_chatbot.py  demo_text_chatbot.py  desktop_monitor_app.py  development.yaml  enhanced_ui_experience.py  error_recovery_system.py  fix_quotes.py  free_ai_models_integration.py  hindi_transliterator.py  intelligent_caching_system.py  intelligent_integration_bridge.py  knowledge_base.json  launch_ai_chatbot.py  launch_multilingual_ai.py  (+33 more)
.opencode/: opencode.db-shm  opencode.db-wal
assets/: installer_config.json
config/: config.yaml
configs/: app_config.yaml  nlp_config.yaml
conversation/: dialog_flow.py
core/: adaptation_engine.py  chatbot.py  chatbot_backup.py  chatbot_clean.py  chatbot_fixed.py  chatbot_minimal.py  chatbot_test.py  edge_tts_engine.py  hinglish_voice_processor.py  state_manager.py
data/: knowledge.db  knowledge_base.json  knowledge_base.json.backup_20250925_224619  shop_knowledge.json  (+2 more)
src/: cli.py  (+46 more)
(+68 files in other folders)
